--- a/roles/apache/files/index.html
+++ b/roles/apache/files/index.html
@@ -6,6 +6,7 @@
 Welcome to Earth!
 </h1>
 <br/><br/><br/>
+  <p>Hello from Ansible</p>
 <p>
 <img src="Blue_marble_2015.jpg" alt="Earth" width="500" height="500"/>
 </p>
